Fixed spacing

--- a/src/components/talks-section/talks.module.scss
+++ b/src/components/talks-section/talks.module.scss
@@ -12,7 +12,7 @@
   }
 
   @include media("<=phone") {
-    padding: 24px 0 24px 16px;
+    padding: 24px 0 24px 24px;
   }
 }
 
@@ -162,7 +162,7 @@
   padding-right: 8.6vw;
 
   @include media("<=phone") {
-    padding-right: 16px;
+    padding-right: 24px;
   }
 }
 
