--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -185,6 +185,7 @@
         width: 100%;
         max-width: unset;
         padding: 0 24px;
+        row-gap: 20px;
       }
 
       svg {
